# drat

./: justfile  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: lib.rs  main.rs  signal.rs
src/lib/: bindings.gen.ts  bindings.ts
src/lib/pages/: SignalLinking.svelte  Start.svelte
src/routes/: +page.svelte
